hphp/hack/test/typecheck/expression_trees/questionquestion.php.exp
WARN: File "questionquestion.php", line 11, characters 5-16:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "questionquestion.php", line 11, characters 5-8:
  The expression on the left has type `null` which is always `null`.
WARN: File "questionquestion.php", line 12, characters 5-13:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "questionquestion.php", line 12, characters 5-8:
  The expression on the left has type `null` which is always `null`.
WARN: File "questionquestion.php", line 13, characters 5-14:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "questionquestion.php", line 13, characters 5-8:
  The expression on the left has type `null` which is always `null`.
WARN: File "questionquestion.php", line 15, characters 5-12:
This null coalesce will always evaluate to its left-hand side. (Warn[12023])
  File "questionquestion.php", line 10, characters 31-40:
  The expression on the left has type `int` which can never be `null`.
WARN: File "questionquestion.php", line 17, characters 11-20:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "questionquestion.php", line 17, characters 11-14:
  The expression on the left has type `null` which is always `null`.
WARN: File "questionquestion.php", line 19, characters 12-21:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "questionquestion.php", line 19, characters 12-15:
  The expression on the left has type `null` which is always `null`.
ERROR: File "questionquestion.php", line 30, characters 5-9:
Indexing with `[]` is not supported in expression trees. (Parsing[1002])
ERROR: File "questionquestion.php", line 30, characters 5-14:
Expression trees do not support array access (e.g. `arr[0]`) as the left side of the null coalesce operator (`??`). (Parsing[1002])
ERROR: File "questionquestion.php", line 30, characters 5-6:
Variable `$x` is undefined, or not always defined. (Naming[2050])
ERROR: File "questionquestion.php", line 23, characters 5-19:
`ExampleMixedOpType` does not support this operator (it has no instance method named `__plus`) (Typing[4053])
